--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,170 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+  * {
+    font-family: var(--font-poppins);
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  html {
+    scroll-behavior: smooth;
+    font-size: 16px;
+  }
+
+  body {
+    @apply bg-[#000] font-poppins font-normal text-base overflow-hidden;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  :root {
+    /* hex */
+    --white-100: #f9f9f9;
+    --primary: #130f40;
+    --primary-900: #2b2754;
+    --primary-700: #5a577a;
+    --primary-500: #8987a0;
+    --primary-300: #b9b7c6;
+    --primary-100: #e8e7ec;
+    --primary-50: #f3f3f5;
+    --secondary: #ae00b9;
+    --secondary-700: #c74dce;
+    --secondary-500: #d780dc;
+    --secondary-300: #e7b3ea;
+    --secondary-200: #efccf1;
+    --secondary-100: #f7e6f8;
+    --secondary-50: #fbf2fb;
+    --warning: #ffa113;
+    --error: #ff0102;
+    --success: #00b15b;
+    --light-red: #dc3545;
+
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --white-100: #f9f9f9;
+    --primary: #130f40;
+    --primary-900: #2b2754;
+    --primary-700: #5a577a;
+    --primary-500: #8987a0;
+    --primary-300: #b9b7c6;
+    --primary-100: #e8e7ec;
+    --primary-50: #f3f3f5;
+    --secondary: #ae00b9;
+    --secondary-700: #c74dce;
+    --secondary-500: #d780dc;
+    --secondary-300: #e7b3ea;
+    --secondary-200: #efccf1;
+    --secondary-100: #f7e6f8;
+    --secondary-50: #fbf2fb;
+    --warning: #ffa113;
+    --error: #ff0102;
+    --success: #00b15b;
+
+    --background: 222.2 84% 4.9%;
+    --foreground: 0 0% 100%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 0 0% 100%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 0 0% 100%;
+
+    --muted: 215.4 16.3% 46.9%;
+    --muted-foreground: 210 40% 96.1%;
+
+    --accent: 222.2 47.4% 11.2%;
+    --accent-foreground: 0 0% 100%;
+
+    --destructive: 210 40% 98%;
+    --destructive-foreground: 0 84.2% 60.2%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 0 0% 100%;
+  }
+}
+
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    @apply w-1.5;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track,
+  body::-webkit-scrollbar-track {
+    @apply bg-primary-50;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb,
+  body::-webkit-scrollbar-thumb {
+    @apply bg-secondary rounded-5;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
+/* modified container */
+.container {
+  max-width: 100%;
+}
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    padding: 0 25px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 991px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1199px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1399px) {
+  .container {
+    max-width: 1200px;
+  }
 }
